Name not visible in most liked/commented previews  - Issue fixed Edit/Delete widget alignment issue fixed for most liked/commented popups.

--- a/web/css/viewBuzzSuccess.css
+++ b/web/css/viewBuzzSuccess.css
@@ -1002,3 +1002,7 @@ input[type="button"]{
     display: none;
 }
 
+.popupCommentList #commentColumnThree{
+    display: none;
+}
+
